{
  "version": 4,
  "terraform_version": "1.9.2",
  "serial": 235,
  "lineage": "753720c6-3324-2b37-a3cb-c098faab7adc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nextcloud",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0caef02b518350c8b",
            "arn": "arn:aws:ec2:eu-central-1:058264482172:instance/i-0481bb152c14608be",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0481bb152c14608be",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "workshopkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09c8957011539b577",
            "private_dns": "ip-10-0-0-119.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.119",
            "public_dns": "ec2-3-122-204-201.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.122.204.201",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a2d8d693b6f786c8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e294009b3dc9449d",
            "tags": {
              "Name": "NextcloudServer-2am8t5n7"
            },
            "tags_all": {
              "Name": "NextcloudServer-2am8t5n7"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07d8e1dff22671ff3"
            ]
          },
          "dependencies": [
            "aws_db_instance.nextcloud_db",
            "aws_db_subnet_group.nextcloud",
            "aws_security_group.nextcloud",
            "aws_security_group.nextcloud_db",
            "aws_security_group.nextcloud_lb",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.nextcloud_vpc",
            "data.aws_availability_zones.available",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "nextcloud_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:058264482172:internet-gateway/igw-0c52e3724b105f50c",
            "id": "igw-0c52e3724b105f50c",
            "owner_id": "058264482172",
            "tags": {
              "Name": "nextcloud-igw-2am8t5n7"
            },
            "tags_all": {
              "Name": "nextcloud-igw-2am8t5n7"
            },
            "vpc_id": "vpc-0c170787fb755850d"
          },
          "dependencies": [
            "aws_vpc.nextcloud_vpc",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "nextcloud",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:058264482172:loadbalancer/app/nextcloud-lb/eb2e6eaead1f7fd0",
            "arn_suffix": "app/nextcloud-lb/eb2e6eaead1f7fd0",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "nextcloud-lb-1942654877.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:058264482172:loadbalancer/app/nextcloud-lb/eb2e6eaead1f7fd0",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "nextcloud-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0c6903ba3c4815951"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-002de18d7a27607d4"
              },
              {
                "subnet_id": "subnet-0e294009b3dc9449d"
              }
            ],
            "subnets": [
              "subnet-002de18d7a27607d4",
              "subnet-0e294009b3dc9449d"
            ],
            "tags": {
              "Name": "NextcloudLoadBalancer"
            },
            "tags_all": {
              "Name": "NextcloudLoadBalancer"
            },
            "vpc_id": "vpc-0c170787fb755850d",
            "xff_header_processing_mode": "append",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_security_group.nextcloud_lb",
            "aws_subnet.public",
            "aws_vpc.nextcloud_vpc",
            "data.aws_availability_zones.available",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nextcloud_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:058264482172:listener/app/nextcloud-lb/eb2e6eaead1f7fd0/e843fad7bd2c63ac",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:058264482172:listener/app/nextcloud-lb/eb2e6eaead1f7fd0/e843fad7bd2c63ac",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:058264482172:loadbalancer/app/nextcloud-lb/eb2e6eaead1f7fd0",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.nextcloud",
            "aws_security_group.nextcloud_lb",
            "aws_subnet.public",
            "aws_vpc.nextcloud_vpc",
            "data.aws_availability_zones.available",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nextcloud_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:058264482172:listener/app/nextcloud-lb/eb2e6eaead1f7fd0/0243d88b16910052",
            "certificate_arn": "arn:aws:acm:eu-central-1:058264482172:certificate/7f8e9f43-7f3f-40b8-879d-31862886dd53",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:058264482172:targetgroup/nextcloud-tg/bae51a5aba1023ba",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:058264482172:listener/app/nextcloud-lb/eb2e6eaead1f7fd0/0243d88b16910052",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:058264482172:loadbalancer/app/nextcloud-lb/eb2e6eaead1f7fd0",
            "mutual_authentication": [
              {
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.nextcloud_cert",
            "aws_lb.nextcloud",
            "aws_lb_target_group.nextcloud",
            "aws_security_group.nextcloud_lb",
            "aws_subnet.public",
            "aws_vpc.nextcloud_vpc",
            "data.aws_availability_zones.available",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nextcloud",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:058264482172:targetgroup/nextcloud-tg/bae51a5aba1023ba",
            "arn_suffix": "targetgroup/nextcloud-tg/bae51a5aba1023ba",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:058264482172:targetgroup/nextcloud-tg/bae51a5aba1023ba",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "nextcloud-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0c170787fb755850d"
          },
          "dependencies": [
            "aws_vpc.nextcloud_vpc",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "nextcloud",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:058264482172:targetgroup/nextcloud-tg/bae51a5aba1023ba-20240815121825683800000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:058264482172:targetgroup/nextcloud-tg/bae51a5aba1023ba",
            "target_id": "i-0481bb152c14608be"
          },
          "dependencies": [
            "aws_db_instance.nextcloud_db",
            "aws_db_subnet_group.nextcloud",
            "aws_instance.nextcloud",
            "aws_lb_target_group.nextcloud",
            "aws_security_group.nextcloud",
            "aws_security_group.nextcloud_db",
            "aws_security_group.nextcloud_lb",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.nextcloud_vpc",
            "data.aws_availability_zones.available",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:058264482172:route-table/rtb-0c914dcfad5591a01",
            "id": "rtb-0c914dcfad5591a01",
            "owner_id": "058264482172",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c52e3724b105f50c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "nextcloud-public-rt"
            },
            "tags_all": {
              "Name": "nextcloud-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c170787fb755850d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.nextcloud_igw",
            "aws_vpc.nextcloud_vpc",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01046e91557698151",
            "route_table_id": "rtb-0c914dcfad5591a01",
            "subnet_id": "subnet-0e294009b3dc9449d"
          },
          "dependencies": [
            "aws_internet_gateway.nextcloud_igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.nextcloud_vpc",
            "data.aws_availability_zones.available",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03b2c33fce0679843",
            "route_table_id": "rtb-0c914dcfad5591a01",
            "subnet_id": "subnet-002de18d7a27607d4"
          },
          "dependencies": [
            "aws_internet_gateway.nextcloud_igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.nextcloud_vpc",
            "data.aws_availability_zones.available",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nextcloud",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:058264482172:security-group/sg-07d8e1dff22671ff3",
            "description": "Security group for Nextcloud server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07d8e1dff22671ff3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c6903ba3c4815951"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c6903ba3c4815951"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nextcloud_sg_2am8t5n7",
            "name_prefix": "",
            "owner_id": "058264482172",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c170787fb755850d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.nextcloud_lb",
            "aws_vpc.nextcloud_vpc",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nextcloud_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:058264482172:security-group/sg-020137535bed1cecb",
            "description": "Security group for Nextcloud database",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-020137535bed1cecb",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07d8e1dff22671ff3"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "nextcloud_db_sg_2am8t5n7",
            "name_prefix": "",
            "owner_id": "058264482172",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c170787fb755850d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.nextcloud",
            "aws_security_group.nextcloud_lb",
            "aws_vpc.nextcloud_vpc",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nextcloud_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:058264482172:security-group/sg-0c6903ba3c4815951",
            "description": "Security group for Nextcloud load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c6903ba3c4815951",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nextcloud-lb-sg",
            "name_prefix": "",
            "owner_id": "058264482172",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c170787fb755850d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.nextcloud_vpc",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:058264482172:subnet/subnet-047f6bcb1ea2af870",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-047f6bcb1ea2af870",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264482172",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nextcloud-private-subnet-1"
            },
            "tags_all": {
              "Name": "nextcloud-private-subnet-1"
            },
            "vpc_id": "vpc-0c170787fb755850d"
          },
          "dependencies": [
            "aws_vpc.nextcloud_vpc",
            "data.aws_availability_zones.available",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:058264482172:subnet/subnet-0d6a29015543bf01d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d6a29015543bf01d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264482172",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nextcloud-private-subnet-2"
            },
            "tags_all": {
              "Name": "nextcloud-private-subnet-2"
            },
            "vpc_id": "vpc-0c170787fb755850d"
          },
          "dependencies": [
            "aws_vpc.nextcloud_vpc",
            "data.aws_availability_zones.available",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:058264482172:subnet/subnet-0e294009b3dc9449d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e294009b3dc9449d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058264482172",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nextcloud-public-subnet-1"
            },
            "tags_all": {
              "Name": "nextcloud-public-subnet-1"
            },
            "vpc_id": "vpc-0c170787fb755850d"
          },
          "dependencies": [
            "aws_vpc.nextcloud_vpc",
            "data.aws_availability_zones.available",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:058264482172:subnet/subnet-002de18d7a27607d4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-002de18d7a27607d4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058264482172",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nextcloud-public-subnet-2"
            },
            "tags_all": {
              "Name": "nextcloud-public-subnet-2"
            },
            "vpc_id": "vpc-0c170787fb755850d"
          },
          "dependencies": [
            "aws_vpc.nextcloud_vpc",
            "data.aws_availability_zones.available",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "nextcloud_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:058264482172:vpc/vpc-0c170787fb755850d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cdf0b2a9a28e2ca0",
            "default_route_table_id": "rtb-02a1fc682914c1d11",
            "default_security_group_id": "sg-076691fa1184d2580",
            "dhcp_options_id": "dopt-037604730182aa2b6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c170787fb755850d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02a1fc682914c1d11",
            "owner_id": "058264482172",
            "tags": {
              "Name": "nextcloud-vpc-2am8t5n7"
            },
            "tags_all": {
              "Name": "nextcloud-vpc-2am8t5n7"
            }
          },
          "dependencies": [
            "random_string.suffix"
          ]
        }
      ]
    }
  ]
}